name:                todoist
version:             0.1.0.0
synopsis:            Text user interface for Todoist
homepage:            https://github.com/hotpxl/todoist-tui#readme
license:             MIT
license-file:        LICENSE
author:              Yutian Li
maintainer:          hotpxless@gmail.com
copyright:           2017 Yutian Li
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable todoist
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , wreq
                     , lens
                     , text
                     , bytestring
                     , aeson
                     , unordered-containers
                     , brick
                     , vty
                     , vector
                     , microlens
                     , text-zipper
                     , uuid
                     , directory
                     , filepath
